--- a/src/components/Books/Books.module.css
+++ b/src/components/Books/Books.module.css
@@ -2,7 +2,7 @@
   width: 21rem;
   /* padding:10px 10px 0px 10px; */
   /* padding-top:15px ; */
-  /* margin:10px; */
+  margin-top:80px;
   margin-bottom: 40px;
   background-color: white !important;
   border-radius: 13px !important;
