--- a/src/components/Books/Books.module.css
+++ b/src/components/Books/Books.module.css
@@ -1,12 +1,9 @@
 .cardbox {
   width: 21rem;
-  /* padding:10px 10px 0px 10px; */
-  /* padding-top:15px ; */
-  margin-top:80px;
+  margin-top: 30px;
   margin-bottom: 40px;
   background-color: white !important;
   border-radius: 13px !important;
-  /* box-shadow:5px 8px 5px rgb(207, 205, 205); */
   overflow: hidden;
   text-decoration: none;
 }
@@ -23,19 +20,12 @@
 }
 .booktitle {
   text-align: center;
-  /* font-family: 'Arial Narrow', Arial, sans-serif; */
-  /* font-size:50px !important; */
-  /* font-family: 'Times New Roman', Times, serif; */
-  /* margin-bottom:20px; */
   padding: 10px;
   border-bottom: 1px solid rgb(225, 203, 245);
   color: black;
-  /* overflow: hidden; */
   text-decoration: none;
 }
 .cardattribute {
-  /* padding-bottom: 1.5em;
-    border-top: 2px solid hsl(215, 32%, 27%); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -50,7 +40,6 @@
 .booktext {
   color: rgb(84, 9, 155);
   font-size: 18px;
-  /* margin-bottom: 3px; */
   margin: 0px;
 }
 .author {
@@ -91,4 +80,11 @@
 }
 .link-box {
   text-decoration: none;
+}
+.container {
+  margin-top: 80px !important;
+}
+.outer-container {
+  display: flex;
+  justify-content: center;
 }
