--- a/src/components/Books/BookRequests.module.css
+++ b/src/components/Books/BookRequests.module.css
@@ -68,3 +68,46 @@
   background-color: rgb(149, 32, 32);
   color: white;
 }
+.returnbookbutton {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: end;
+  /* border: 1px solid red; */
+}
+.submit-button {
+  margin: 10px;
+  padding: 8px;
+  color: blueviolet;
+  border: 2px solid blueviolet;
+  border-radius: 20px;
+  background-color: white;
+}
+.submit-button:hover {
+  background-color: blueviolet;
+  color: white;
+}
+.return-button {
+  margin: 10px;
+  padding: 8px;
+  color: blueviolet;
+  border: 2px solid blueviolet;
+  border-radius: 20px;
+  background-color: white;
+  align-items: end;
+}
+.return-button:hover {
+  background-color: blueviolet;
+  color: white;
+}
+.mybookcover {
+  width: 80%;
+  border: 1px solid rgb(244, 240, 240);
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  box-shadow: 5px 5px 5px rgb(240, 237, 237);
+}
