--- a/src/components/Layout/Header.css
+++ b/src/components/Layout/Header.css
@@ -10,3 +10,12 @@
   color: white;
   cursor: pointer;
 }
+
+#navbarScrollingDropdown{
+ color:white;
+}
+.loginSignupTitles1{
+  text-decoration: none;
+  color: blueviolet;
+  cursor: pointer;
+}
